--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "nestjs-social-media-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Deema M. Kwaik",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,6 +28,7 @@
     "@nestjs/jwt": "10.0.2",
     "@nestjs/passport": "9.0.3",
     "@nestjs/platform-express": "9.0.0",
+    "@nestjs/sequelize": "9.0.0",
     "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -37,6 +40,7 @@
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0",
     "sequelize": "6.28.0",
+    "sequelize-cli": "5.5.1",
     "sequelize-typescript": "2.1.5"
   },
   "devDependencies": {
