New: Enhance through adding transaction interceptor and seeders

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "db:migrate": "ts-node node_modules/.bin/sequelize db:migrate",
     "db:migrate:undo": "ts-node node_modules/.bin/sequelize db:migrate:undo",
+    "db:seed": "ts-node node_modules/.bin/sequelize db:seed:all",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -33,23 +34,26 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dotenv": "16.0.3",
+    "faker": "5.5.3",
     "mysql2": "3.1.2",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0",
-    "sequelize": "6.28.0",
+    "sequelize": "6.29.0",
     "sequelize-cli": "5.5.1",
     "sequelize-typescript": "2.1.5",
     "typescript": "4.5.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "7.6.0",
     "@nestjs/cli": "9.0.0",
     "@nestjs/schematics": "9.0.0",
     "@nestjs/testing": "9.0.0",
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.13",
+    "@types/faker": "6.6.9",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "3.0.8",
