--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,4 +4,5 @@ const path = require("path");
 module.exports = {
   config: path.resolve("src/db", "config.ts"),
   "migrations-path": path.resolve("src/db", "migrations"),
+  "seeders-path": path.resolve("src/db", "seeders"),
 };
