New: Enhance through adding aws cognito

--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@nestjs/passport": "9.0.3",
     "@nestjs/platform-express": "9.0.0",
     "@nestjs/sequelize": "9.0.0",
+    "amazon-cognito-identity-js": "6.1.2",
     "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dotenv": "16.0.3",
     "faker": "5.5.3",
+    "jwks-rsa": "3.0.1",
     "mysql2": "3.1.2",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
